# composio-crewai-sample

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  report.md  setup.sh
myenv/: pyvenv.cfg
src/client/: __init__.py  crew.py
src/client/config/: tasks.yaml
src/client/tools/: custom_tool.py
src/serhant/: __init__.py  crew.py
src/serhant/config/: agents.yaml
