[tool.poetry]
name = "client"
version = "0.1.0"
description = "client using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}
composio-crewai = "^0.1.84"
composio-langchain = "^0.1.84"
composio-core = "^0.1.84"
flask = "^3.0.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
client = "client.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"